--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -582,59 +582,14 @@
 /*
   p-top-faqPC__question
 ---------------------------------------------------- */
-
-.p-top-faqPC {
-  // slick
-  // display: flex;
-}
-
-// non slick
-// .p-top-faqPC__question {
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: space-between;
-// }
-
-.p-top-faqPC__question1,
-.p-top-faqPC__question2 {
-  // slick
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-// non slick
-// .p-top-faqPC__questionList {
-//   width: 30%;
-//   height: 30vh;
-//   border: solid 1px black;
-//   user-select: none; // ダブルクリック時の青色選択無効
-
-//   &:not(:nth-last-child(-n+3)) {
-//     margin-bottom: 40px;
-//   }
-
-//   &:hover {
-//     transform: scale(1.05);
-//   }
-// }
-
-.p-top-faqPC__question1List,
-.p-top-faqPC__question2List {
-  // slick
+.p-top-faqPC__questionList {
   width: 300px;
   height: 100px;
   border: solid 1px black;
   user-select: none; // ダブルクリック時の青色選択無効
-  margin-right: 0;
   display: flex;
-
-  &:not(:nth-last-child(-n+3)) {
-    margin-bottom: 40px;
-  }
-
-  &:hover {
-    transform: scale(1.05);
+  &:nth-last-child(n+2) {
+    margin-right: 10px;
   }
 }
 
