Make close button and to not scroll

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -207,6 +207,7 @@ src/ejs/template/_head %>
           <div id="bgBlack"></div>
           <div class="p-top-faqPC__answerList__textBlock">
             <p class="p-top-faqPC__answerList__text">A.<%= answer[i] %></p>
+            <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
           </div>
         </li>
       <% } %>
