--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -6,20 +6,20 @@ src/ejs/template/_head %>
 
 <main class="l-main">
   <div class="l-top-heading">
-    <div class="p-top-heading__block">
+    <div class="p-top-heading__block" id="fluffy_disappear">
       <div class="p-top-heading__circle--day">
-        <h3 class="p-top-heading__catchPhrase">最短<span class="p-top-heading__catchPhrase--bold">2</span>日で<br>業務開始</h3>
+        <h3 class="p-top-heading__catchPhrase">最短<span class="p-top-heading__catchPhrase--bold"> 2 </span>日で<br>業務開始 !</h3>
       </div>
       <img src="<%= imgPath %>trust.png" class="p-top-heading__titleImg" alt="トラストのロゴ">
-      <div class="p-top-heading__flex">
+      <div class="p-top-heading__horizontal">
         <div class="p-top-heading__circle--match">
-          <h3 class="p-top-heading__catchPhrase">希望案件<br>マッチ率<span class="p-top-heading__catchPhrase--bold">97</span>％</h3>
+          <h3 class="p-top-heading__catchPhrase">希望案件<br>マッチ率<span class="p-top-heading__catchPhrase--bold"> 97 </span>％</h3>
         </div>
-        <div class="p-top-heading__column">
+        <div class="p-top-heading__vertical">
           <a class="c-top-toProject" id="toProject" href="#">案件を見てみる！！</a>
-          <a class="c-top-toLine" id="toProject" href="#">LINE公式アカウントを登録する</a>
+          <a class="c-top-toLINE" id="toProject" href="#">LINE公式アカウントを登録する</a>
         </div>
-        <div class="p-top-heading__circle--line">
+        <div class="p-top-heading__circle--LINE">
           <h3 class="p-top-heading__catchPhrase"><span class="p-top-heading__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
         </div><!-- /.p-top-heading__circle -->
       </div><!-- /.p-top-heading__flex -->
@@ -72,10 +72,10 @@ src/ejs/template/_head %>
     </ul>
   </div>
 
-  <!-- <div class="p-top-container" id="container"> -->
+  <!-- 仕事までの流れ -->
     <div class="p-top-flowUpToWork">
-      <h1 class="p-top-flowUpToWork__heading" id="fade-in-down1">
-        <span class="p-top-flowUpToWork__heading--bold">TTJ</span>があなたのご要望に合ったお仕事を紹介致します
+      <h1 class="p-top-flowUpToWork__heading">
+        <span class="p-top-flowUpToWork__heading--bold">TTJ</span>があなたのご要望に合った<br class="u-hidden-pc">お仕事を紹介致します
       </h1>
       <ul class="p-top-flowUpToWork__menu">
         <% var flow = [
@@ -83,19 +83,20 @@ src/ejs/template/_head %>
           {'flowNum': '02', 'flowImage': 'contact.png             ', 'flowText': '担当から連絡'},
           {'flowNum': '03', 'flowImage': 'project_introduction.png', 'flowText': '打ち合わせ'},
           {'flowNum': '04', 'flowImage': 'business.png            ', 'flowText': '案件紹介'},
-          {'flowNum': '04', 'flowImage': 'business.png            ', 'flowText': 'クライアントへ提案(遅くても2日以内)'},
+          {'flowNum': '04', 'flowImage': 'business.png            ', 'flowText': 'クライアントへ提案<br>(遅くても2日以内)'},
           {'flowNum': '04', 'flowImage': 'business.png            ', 'flowText': 'エンジニア、クライアント打ち合わせ'},
           {'flowNum': '04', 'flowImage': 'business.png            ', 'flowText': '業務開始'},
         ]; %>
         <% for (var i = 0; i < flow.length; i++) { %>
         <li class="p-top-flowUpToWork__list">
           <img class="p-top-flowUpToWork__list__image" src="<%= imgPath %><%= flow[i].flowImage %>" alt="仕事の流れ 画像">
-          <p class="p-top-flowUpToWork__list__txt"><%= flow[i].flowText %></p>
+          <p class="p-top-flowUpToWork__list__txt"><%- flow[i].flowText %></p>
         </li>
         <% } %>
       </ul>
     </div>
 
+    <!-- 案件例 -->
     <div class="p-top-project" id="project">
       <% var jobCategory = ['Engineer', 'Engineer', 'Designer']; %>
       <% var projects = [
@@ -111,7 +112,7 @@ src/ejs/template/_head %>
       <ul class="p-top-project__list">
         <% for (var k = 0; k < projects.length; k++) { %>
           <li class="p-top-project__listItem" id="fade-in-down<%= k+2 %>">
-            <p class="p-top-project__listItem__jobCategory__txt"><%= jobCategory[k] %></p>
+            <p class="p-top-project__listItem__jobCategory"><%= jobCategory[k] %></p>
             <img class="p-top-project__listItem__goodMan" src="<%= imgPath %>goodhuman.png" alt="男性　いいね">
             <ul class="p-top-project__listItem__developmentEnironment">
               <% for (var l = 0; l < developmentEnvironment.length; l++) { %>
@@ -142,16 +143,15 @@ src/ejs/template/_head %>
       </ul>
     </div><!-- /.p-top-project -->
 
+    <!-- 円グラフ -->
     <ul class="p-top-pieList">
       <% var pattern = ['開発言語', '開発内容', '月収']; %>
       <% for (var m = 0; m < pattern.length; m++) { %>
       <li class="p-top-pieItem">
-        <!-- <h2 class="p-top-pieItem__title"><%= pattern[m] %></h2> -->
         <p class="p-top-pieItem__image"><img src="<%= imgPath %><%= pattern[m] %>.png" alt="開発言語 画像"></p>
       </li>
       <% } %>
     </ul>
-  <!-- </div> -->
 
   <div class="l-top-faq">
     <h1 class="p-top-faq__title">FAQ</h1>
