--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -27,34 +27,24 @@ src/ejs/template/_head %>
   </div><!-- /.l-top-heading -->
 
   <div class="l-top-aboutService" id="aboutService">
-    <ul class="p-top-aboutService__logo">
-      <% var serviceInitial   = ['T','T','J']; %>
-      <% var aboutServiceLogo = ['rust','ech','ob']; %>
-      <% for (var i = 0; i < aboutServiceLogo.length; i++) { %>
-        <li class="p-top-aboutService__logoList">
-          <span class="p-top-aboutService__logoList__initial" id="fadeLogoInitial<%= i+1 %>"><%= serviceInitial[i] %></span><%= aboutServiceLogo[i] %>
-        </li>
+    <ul class="p-top-aboutService__textBlock">
+      <% var aboutServiceText = [
+        'TTJは今まで様々なITビジネスの営業に携わってきた<span class="p-top-aboutService__text--modifier">IT業界の営業スペシャリスト</span>です。',
+        'その中での経験からクライアントとエンジニア、双方のニーズの合致こそがT業界の発展だと考えております。',
+        'TTJではエンジニアのニーズを尊重し<span class="p-top-aboutService__text--modifier">【あなたにマッチする案件】</span>を提案します。',
+        '弊社の営業ノウハウには自信がありますので、<span class="p-top-aboutService__text--modifier">【自走できるエンジニア】</span>へのサポートもお任せ下さい。'
+      ]; %>
+      <% for (var i = 0; i < aboutServiceText.length; i++) { %>
+        <li class="p-top-aboutService__text" id="aboutServiceText<%= i+1 %>"><%- aboutServiceText[i] %></li>
       <% } %>
     </ul>
-    <dl class="p-top-aboutService__explain">
-      <dt class="p-top-aboutService__explain__title">
-        <% for (var i = 0; i < serviceInitial.length; i++) { %>
-          <span class="p-top-aboutService__explain__titleInitial"><%= serviceInitial[i] %></span>
-        <% } %>
-        とは
-      </dt>
-      <span class="p-top-aboutService__explain__underline" id="extendUnderline"></span>
-      <dd class="p-top-aboutService__explain__text">
-        TTJは今まで様々なITビジネスの営業に携わってきたIT業界の営業スペシャリストです。<br><br>
-        その中での経験からクライアントとエンジニア、双方のニーズの合致こそがT業界の発展だと考えております。<br>
-        TTJではエンジニアのニーズを尊重し【あなたにマッチする案件】を提案します。
-        弊社の営業ノウハウには自信がありますので、【自走できるエンジニア】へのサポートもお任せ下さい。<br><br>
-        本当に自分のスキルに合った業務につけるのか...<br><br>
-        フリーランスとしてどのように営業すれば良いかわからない...<br><br>
-        単価の交渉のやり方...等<br><br>
-        まずはお気軽にLINEにてご登録下さい！
-      </dd>
-    </dl>
+    <div class="p-top-aboutService__entry">
+      <img src="<%= imgPath %>aboutService_img1.png" class="p-top-aboutService__entry__img" alt="人の吹き出し">
+      <div class="p-top-aboutService__entryBlock">
+        <p class="p-top-aboutService__entryBlock__text">まずはお気軽にLINEにてご登録下さい！</p>
+        <a class="c-top-toLine" id="toProject" href="#">LINE公式アカウントを登録する</a>
+      </div>
+    </div>
   </div>
 
   <div class="l-top-request">
