--- a/src/scss/layout/_top.scss
+++ b/src/scss/layout/_top.scss
@@ -7,45 +7,25 @@
 }
 
 .l-top-heading {
-  height: 100vh;
-  position: relative;
   display: flex;
   align-items: center;
-  padding: 10px 0; // あれ...?当たってない？
-  background: url(#{$bgPath}sea.jpg) no-repeat center/cover;
-  background-attachment: fixed;
-  // &::before { // ぼかした背景画像を上から被せる
-  //   position: absolute;
-  //   bottom: 0;
-  //   right: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   padding-top: 53%;
-  //   background: inherit; // 親要素から背景設定を継承する
-  //   background-clip: content-box; // paddingは除外したい
-  //   filter: blur(5px);
-  //   content: '';
-  // }
+  padding: 100px 0;
+  background: url(#{$bgPath}sea_morudibu.jpg) no-repeat center/cover;
+  // background: linear-gradient(25deg, rgba(#FC9D9D, 0.4), rgba(#C5E99B, 0.4)) ,url(#{$bgPath}sea_morudibu.jpg) no-repeat center/cover;
+  @include mq('u-sp') {
+    padding-left: 0;
+    flex-direction: column;
+    background-size: 100%;
+    background-position: bottom;
+  }
 }
 
 .l-top-aboutService {
-  padding: 100px 50px;
-
-  // 最初のTTJ
-  // display: flex;
-  // padding: 20px 0 50px 100px;
-  // background: url('#{$bgPath}bg-trust-logo.png') no-repeat;
-  // background-color:rgba(255,255,255,0.9); // 背景画像のみ薄く（IE,Edge　未対応）
-  // background-blend-mode: lighten; // 背景画像のみ薄く（IE,Edge　未対応）
-  // background-size: 42%;
+  font-family: 'Sawarabi Mincho', sans-serif;
+  color: black;
+  padding: 100px;
+  background: linear-gradient(180deg,#ecccac,#e4e4e4 10% 90%,#fff);
 }
-
-//　だんだん大きく濃くな〜る: 最初のTTJ
-// .toDarkBgColor {
-//   transition: 3.0s;
-//   background-color:rgba(255,255,255,0.5);
-//   background-size: 45%;
-// }
 
 .l-top-request {
   background: linear-gradient(to bottom,#e4e4e4 90%, white);
